RESOLVED FIXED185553
LinkLoader fails to remove CachedResourceClient in some cases
https://bugs.webkit.org/show_bug.cgi?id=185553
Summary LinkLoader fails to remove CachedResourceClient in some cases
Antti Koivisto
Reported 2018-05-11 10:49:41 PDT
This may corrupt CachedResource client map.
Attachments
patch (3.48 KB, patch)
2018-05-11 11:03 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-05-11 10:49:59 PDT
Antti Koivisto
Comment 2 2018-05-11 11:03:14 PDT
Antti Koivisto
Comment 3 2018-05-11 11:05:40 PDT
The whole LinkPreloadResourceClient thing could use refactoring to be more robust and less confusing. This is the minimal fix.
Geoffrey Garen
Comment 4 2018-05-11 11:27:47 PDT
Comment on attachment 340204 [details] patch r=me
WebKit Commit Bot
Comment 5 2018-05-11 12:05:42 PDT
Comment on attachment 340204 [details] patch Clearing flags on attachment: 340204 Committed r231713: <https://trac.webkit.org/changeset/231713>
WebKit Commit Bot
Comment 6 2018-05-11 12:05:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.