Cherry-pick r231713. rdar://problem/40172913

LinkLoader fails to remove CachedResourceClient in some cases
    https://bugs.webkit.org/show_bug.cgi?id=185553
    <rdar://problem/36879656>

    Reviewed by Geoffrey Garen.

    Source/WebCore:

    Test: http/tests/preload/link-preload-client-remove.html

    * loader/LinkLoader.cpp:
    (WebCore::LinkLoader::loadLink):

    If there is a link preload already in progress, we fail to clear the client for the ongoing load.
    This may leave the CachedResource client map in a bad state.

    LayoutTests:

    * http/tests/preload/link-preload-client-remove-expected.txt: Added.
    * http/tests/preload/link-preload-client-remove.html: Added.

    Canonical link: https://commits.webkit.org/201043@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231713 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/197228.595@safari-605-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-605-branch@231831 268f45cc-cd09-0410-ab3c-d52691b4dbfc